--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-dom": "^18.2.0",
     "react-full-screen": "^1.1.1",
     "react-scripts": "^2.1.3",
+    "sass": "^1.54.0",
     "string-to-color": "^2.2.2",
     "web-vitals": "^2.1.0"
   },
